Collapse fix #1

--- a/public/css/jacobroy.css
+++ b/public/css/jacobroy.css
@@ -365,17 +365,29 @@ img {
 	  background-color: #505050;
 	}
 
-	.collapse {
-	  display: none;
-	  visibility: hidden;
-	  height:0px;
-	}
+.collapse {
+  display: none;
+}
 
-	.collapse.in {
-	  display: block;
-	  visibility: visible;
-	  height:auto;
-	}
+.collapse.show {
+  display: block;
+}
+
+tr.collapse.show {
+  display: table-row;
+}
+
+tbody.collapse.show {
+  display: table-row-group;
+}
+
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  transition: height 0.35s ease;
+}
+
 
 	.collapsing {
 	  position: relative;
